# $Id$

2009-01-17	Vladlen Y. Koshelev

	* main/UnifiedContainer/UnifiedContainerWorker.class.php,
	test/misc/DAOTest.class.php: generate distinct count query in case of
	container's criteria is distinct; unified container count-tests added. 

2008-12-31	Konstantin V. Arkhipov

	* 0.10.13 released.

2008-12-30	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveEnumeration.class.php,
	core/Form/Primitives/IdentifiablePrimitive.class.php: casting magic
	moved from PrimitiveEnumeration to it's parent; this one fixes
	non-integer identifiers in PrimitiveIdentifier.

2008-12-30	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveIdentifier.class.php,
	test/core/PrimitiveIdentifierTest.class.php: import handling for empty or
	non-integer values and test for empty values added.

	* main/DAOs/GenericDAO.class.php: check if identifier is scalar.

2008-12-26	Ivan Y. Khvostishkov

	* main/DAOs/GenericDAO.class.php, test/misc/DAOTest.class.php:
	preserve object's persistence during manipulations with identity map;
	unit test for covering such change.

2008-12-24	Vladlen Y. Koshelev

	* core/Base/Assert.class.php: isEmpty(), isNotEmpty() added (ported from
	trunk).

	* meta/types/ObjectType.class.php: lazy required property getter checks for
	property's id.

	* main/DAOs/GenericDAO.class.php, test/misc/DAOTest.class.php: check for
	empty id in getById().

2008-12-21	Vladlen Y. Koshelev

	* main/Criteria/Criteria.class.php, test/main/CriteriaTest.class.php:
	addProjection() and corresponding tests added.

	* main/Criteria/Projections/ProjectionChain.class.php: isEmpty() added.

2008-12-18	Konstantin V. Arkhipov

	* core/Cache/AggregateCache.class.php: restore true randomness upon
	exit from guessLabel().

2008-12-18	Vladlen Y. Koshelev

	* core/Form/RegulatedForm.class.php: ruleExists() added.

2008-12-16	Vladlen Y. Koshelev

	* main/Flow/DecoratorController.class.php: controller's decorator added,
	which may be commonly used for request filters.
