@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov, Sveta A. Smirnova  *
+ *   Copyright (C) 2004-2009 by Konstantin V. Arkhipov, Sveta A. Smirnova  *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -39,9 +39,13 @@
 			
 			$this->selfFilter();
 			
-			if (!empty($this->value) && is_string($this->value)
-				&& !($this->max && mb_strlen($this->value) > $this->max)
-				&& !($this->min && mb_strlen($this->value) < $this->min)
+			if (
+				is_string($this->value)
+				// zero is quite special value here
+				&& ($this->value === '0' || !empty($this->value))
+				&& ($length = mb_strlen($this->value))
+				&& !($this->max && $length > $this->max)
+				&& !($this->min && $length < $this->min)
 				&& (!$this->pattern || preg_match($this->pattern, $this->value))
 			) {
 				return true;
